deploy/k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: template-api
  namespace: go-astro-template
spec:
  selector:
    app: template-api
  ports:
    - name: http
      port: 8080
      targetPort: 8080
